--- a/src/stylesheets/overlay/core.css.sass
+++ b/src/stylesheets/overlay/core.css.sass
@@ -5,15 +5,14 @@
 		right: 10px
 		z-index: 1
 
-.qs-notify-elegant
+.overlay-notify-elegant
 	position: fixed
 	padding: 10px
-	border-radius: 10px
 	box-shadow: 0px 0px 8px 3px rgba(0, 0, 0, 0.3)
 	min-height: 30px
 	z-index: 10000
-	background: rgba(0, 0, 0, 0.8)
-	color: #FFF
+	background: rgba(255, 255, 255, 0.95)
+	color: #444
 
 	&.info, &.success
 		border-top: 1px solid #0A0
@@ -44,15 +43,32 @@
 		top: 10px
 		left: 10px
 		width: 32px
+		display: none
 
 	.title
-		margin-top: 5px
-		margin-left: 60px
 		font-weight: bold
 		letter-spacing: 1px
 
+.overlay-loading-screen
+	display: none
+	position: fixed
+	top: 0px
+	left: 0px
+	right: 0px
+	bottom: 0px
+	background: rgba(255, 255, 255, 0.7)
+	z-index: 2000
 
-.loading-overlay
+	.progress
+		position: absolute
+		top: 50%
+		left: 50%
+		width: 200px
+		margin-left: -100px
+		margin-top: -12px
+		
+
+.overlay-loading-inline
 	position: absolute
 	box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.3)
 	//background: -webkit-radial-gradient(50% 50%, ellipse closest-corner, rgba(0, 0, 0, 0.3) 1%, rgba(0, 0, 0, 0.725) 100%)
