updated apis, fixed popover

--- a/src/stylesheets/overlay/core.css.sass
+++ b/src/stylesheets/overlay/core.css.sass
@@ -4,6 +4,15 @@
 		top: 5px
 		right: 10px
 		z-index: 1
+.modal-backdrop
+	background: #FFF
+
+.popover
+	max-width: none
+	min-height: 70px
+	.popover-inner
+		height: 100%
+		position: relative
 
 .overlay-notify-elegant
 	position: fixed
