--- a/src/stylesheets/overlay/core.css.sass
+++ b/src/stylesheets/overlay/core.css.sass
@@ -14,6 +14,15 @@
 		height: 100%
 		position: relative
 
+.popover-backdrop
+	position: fixed
+	top: 0px
+	left: 0px
+	right: 0px
+	bottom: 0px
+	background: transparent
+
+
 .overlay-notify-elegant
 	position: fixed
 	padding: 10px
