--- a/src/stylesheets/overlay/core.css.sass
+++ b/src/stylesheets/overlay/core.css.sass
@@ -153,3 +153,11 @@
 		-webkit-transform: rotate(360deg)
 		transform: rotate(360deg)
 
+#overlay-confirm
+	.modal-dialog
+		width: 400px
+	.modal-header h4
+		font-weight: bold
+	.modal-body
+		font-size: 20px
+
