--- a/src/css/core.css.sass
+++ b/src/css/core.css.sass
@@ -156,19 +156,21 @@
 #overlay-confirm
 	.modal-dialog
 		width: 400px
+		margin-left: auto
+		margin-right: auto
 	.modal-header h4
 		font-weight: bold
 	.modal-body
 		font-size: 20px
 
 .overlay-toast
-  position: fixed
-  background: rgba(50, 50, 50, 0.7)
-  color: #fff
-  font-weight: bold
-  font-size: 24px
-  padding: 15px 40px
-  border-radius: 15px
-  box-shadow: 1px 1px 8px #222
-  text-align: center
-  letter-spacing: 1px
+	position: fixed
+	background: rgba(50, 50, 50, 0.7)
+	color: #fff
+	font-weight: bold
+	font-size: 24px
+	padding: 15px 40px
+	border-radius: 15px
+	box-shadow: 1px 1px 8px #222
+	text-align: center
+	letter-spacing: 1px
