Adding overlay-modal-open class to prevent body scroll flashing

--- a/src/css/core.css.sass
+++ b/src/css/core.css.sass
@@ -7,6 +7,13 @@
 .modal-backdrop
 	background: #FFF
 
+.overlay-modal-open
+  overflow: hidden
+
+  .modal
+    overflow-x: hidden
+    overflow-y: auto
+
 .popover
 	max-width: none
 	min-height: 70px
